[package]
name = "zenlink-dex"
version = "0.1.1"
authors = ["Zenlink Developers"]
edition = "2018"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']


# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies.serde]
optional = true
version = "1.0.101"

[dependencies]
frame-support = { default-features = false, version = '2.0.0' }
frame-system = { default-features = false, version = '2.0.0' }
sp-runtime = { default-features = false, version = '2.0.0' }
sp-std = { version = "2.0.0", default-features = false }

zenlink-assets = { path = "../assets", default-features = false }

[dev-dependencies]
sp-core = { version = '2.0.0' }
sp-io = { version = '2.0.0' }
pallet-balances = {version = '2.0.0'}

[features]
default = ['std']
std = [
    'serde',
    'codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'zenlink-assets/std',
]
