[package]
name = "zenlink-dex-rpc"
version = "0.1.1"
authors = ["Zenlink Developers"]
edition = "2018"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
jsonrpc-core = "15.0"
jsonrpc-core-client = "15.0"
jsonrpc-derive = "15.0"
serde = { version = "1.0.117", features = ["derive"], optional = true }

# Substrate packages

sp-blockchain = { version = '2.0.0', default-features = false }
sp-api = { version = '2.0.0', default-features = false }
sp-rpc = { version = '2.0.0', default-features = false }
sp-runtime = { version = '2.0.0', default-features = false }

# Local packages

zenlink-dex = { path = "..", default-features = false }
zenlink-dex-runtime-api = { path = "./runtime-api", default-features = false }

[features]
default = ["std"]
std = [
    "serde",
    "sp-api/std",
    "sp-runtime/std",
    "zenlink-dex-runtime-api/std"
]