[package]
name = "zenlink-dex-runtime-api"
version = "0.1.0"
authors = ["Zenlink Developers"]
edition = "2018"

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '1.3.4'

[dependencies]
sp-api = { version = '2.0.0', default-features = false }
sp-std = { version = "2.0.0", default-features = false }

# zenlink-dex
zenlink-dex = { path = '../..', default-features = false }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = [
    "sp-api/std",
    "zenlink-dex/std"
]